<resources>
    <string name="app_name">Playtel</string>
    <string name="facebook_app_id">426400607971745</string>
    <string name="fb_login_protocol_scheme">fb426400607971745</string>
    <string name="home_navigation_drawer_open">Open navigation drawer</string>
    <string name="home_navigation_drawer_close">Close navigation drawer</string>
    <string name="razor_pay">rzp_live_wqCD1qShLcXylf</string>
    <string name="EXCEPTION_MESSAGE">Something went wrong, please try again later.</string>
    <string name="NULL_DATA_MESSAGE">Null response</string>
    <string name="info">INFO</string>
    <string name="player">PLAYER</string>
    <string name="thin">thin</string>
    <string name="bold">bold</string>
    <string name="semiBold">semibold</string>
    <string name="light">light</string>
    <string name="ASAP">ASAP</string>
    <string name="REGULAR">regular</string>
    <string name="OSWALD">OSWALD</string>
    <string name="OSWALD_BOLD">OSWALD_BOLD</string>
    <string name="MONTSERRAT_REGULAR">MONTSERRAT_REGULAR</string>
    <string name="MONTSERRAT_BOLD">MONTSERRAT_BOLD</string>
    <string name="emailAddress">Email Address</string>
    <string name="emailAddressormobile">Email / Mobile No.</string>
    <string name="password">Password <font color='#FF0000'>*</font></string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forgot password?\n<u>Reset</u></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_not_valid">Email address is not valid</string>
    <string name="or">or</string>
    <string name="login">Log In</string>
    <string name="email">Email <font color='#FF0000'>*</font> </string>
    <string name="loginWithFacebook">Login with Facebook</string>
    <string name="loginWithGoogle">Login with Google</string>
    <string name="dontHaveAccount">Don\'t have an account ? <b><font color='#34AF56'>Register</font></b></string>
    <string name="network_error">There\'s no network connection right now. Please check your wifi connection or mobile data.</string>
    <string name="GOOGLE">Google</string>
    <string name="FACEBOOK">Facebook</string>
    <string name="empty_email">Please enter email address.</string>
    <string name="empty_inviteCode">Please enter Invite code.</string>
    <string name="empty_emailMobile">Please enter mobile or email.</string>
    <string name="invalid_emailMobile">Please enter valid mobile or email.</string>
    <string name="empty_code">Please enter code.</string>
    <string name="invalid_email">Please enter valid email address.</string>
    <string name="invalid_team_name">Invalid team name.</string>
    <string name="empty_device_token">Device token is empty.</string>
    <string name="empty_device_type">Device type is empty.</string>
    <string name="empty_device_id">Device id is empty.</string>
    <string name="empty_is_social">Empty Is Social.</string>
    <string name="empty_password">Please enter password.</string>
    <string name="password_notMatch">Password not match.</string>
    <string name="short_password">Password minimum length should be 6 characters.</string>
    <string name="short_confirm_password">Confirm Password length should be 6 characters.</string>
    <string name="please_select_date">Please select date.</string>
    <string name="select_date">Select date</string>
    <string name="select_terms_conditions">Please select Terms &amp; Conditions.</string>
    <string name="empty_session">Your session is empty.</string>
    <string name="empty_file">Empty File.</string>
    <string name="invalid_file">Invalid File, Select other one.</string>
    <string name="action_canceled">Sorry, you have cancelled action. Please try again.</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Later">Later</string>
    <string name="mobileNoInfo">You will receive an OTP for verification</string>
    <string name="emailInfo">No spam. We promise! </string>
    <string name="passwordInfo">Password must contain Minimum 6 character</string>
    <string name="lable_forget_password">Forgot password?</string>
    <string name="lable_reset_password">Reset</string>
    <string name="pageNotFound">Data Not Available</string>
    <string name="OAuthException">OAuthException</string>
    <string name="tryAgain">Problem while fetching data from server. Please try again later.</string>
    <string name="invalidSession">Invalid user login session key.</string>
    <string name="internalErrorTryAgain">Internal server error. Please try again later.</string>
    <string name="poorConnection">Network Error!\nPoor connection or connection lost.</string>
    <string name="noConnection">No internet connection.</string>
    <string name="exception">Exception:</string>
    <string name="try_again">Try Again</string>
    <string name="loading">loading&#8230;</string>
    <string name="empty_social_id">Empty Social Id.</string>
    <string name="empty_social_type">Empty Social Type.</string>
    <string name="fullName">Full Name</string>
    <string name="userName">Username</string>
    <string name="mobile">Mobile</string>
    <string name="dob">D.O.B</string>
    <string name="signup">Sign Up</string>
    <string name="alreadyUser">Already a user ? Log In</string>
    <string name="alreadyaUser">Already a user ?\n<u>Log In</u></string>
    <string name="notAMember">Not a member ? <b><u><font color='#FBC349'>Register</font></u></b></string>
    <string name="agree_terms_and_conditions">I agree to Eleven11 <b><u><font color='#727272'>T&amp;C\'s</font></u></b></string>
    <string name="beingAuser"> New Register</string>
    <string name="please_accept_terms_and_conditions">Please accept Terms &amp; Conditions.</string>
    <string name="empty_full_name">Please enter full name.</string>
    <string name="empty_username">Please enter Username.</string>
    <string name="empty_name">Please enter name.</string>
    <string name="empty_pan">Please enter PAN number.</string>
    <string name="empty_aadhar">Please enter Aadhaar number.</string>
    <string name="empty_account">Please enter account number.</string>
    <string name="empty_ifsc">Please enter IFSC code.</string>
    <string name="empty_bank">Please enter bank name.</string>
    <string name="empty_branch">Please enter branch name.</string>
    <string name="empty_message">Please enter message.</string>
    <string name="empty_subject">Please enter subject.</string>
    <string name="empty_phone_number">Please enter mobile number.</string>
    <string name="empty_otp">Please enter mobile OTP.</string>
    <string name="select_dob">Please select D.O.B.</string>
    <string name="invalid_phone_number">Please enter valid mobile number.</string>
    <string name="invalid_aadhar">Please enter valid Aadhaar number.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="empty_confirm_password">Please enter confirm password.</string>
    <string name="pleaseCheckYourMail">Please check your mail or phone for verification code.</string>
    <string name="forgotYourPassword">Forgot Your Password?</string>
    <string name="forgotPasswordText">Don\'t worry just fill in your email address or mobile no. and we\'ll help you reset your password</string>
    <string name="resetpassword">Reset Password</string>
    <string name="resetCode">Resend Code</string>
    <string name="empty_verification_code">Please enter verification code.</string>
    <string name="invalid_verification_code">Invalid verification code.</string>
    <string name="empty_new_password">Please enter new password.</string>
    <string name="empty_old_password">Please enter old password.</string>
    <string name="password_does_not_match">Password doesn\'t match.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="delete_notifications">Are you sure to delete all notifcations?</string>
    <string name="home">HOME</string>
    <string name="myContest">MY CONTESTS</string>
    <string name="me">ME</string>
    <string name="more">MORE</string>
    <string name="myMatches">MY MATCHES</string>
    <string name="profile">PROFILE</string>
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="kabaddi">Kabaddi</string>
    <string name="basketball">Stock Trade</string>
    <string name="hockey">Hockey</string>
    <string name="fixtures">Upcoming</string>
    <string name="live">Live</string>
    <string name="results">Results</string>
    <string name="selectSport">Select your sports</string>
    <string name="VS">VS</string>
    <string name="vs">vs</string>
    <string name="selectMatch">Select a Match</string>
    <string name="matchCenter">Match Center</string>
    <string name="in_progress">In Progress</string>
    <string name="Zero_s">0s left</string>
    <string name="completed">Completed</string>
    <string name="contest_joined_1">%1$s Contest Joined</string>
    <string name="empty_page">Page empty.</string>
    <string name="empty_match_id">Page match id.</string>
    <string name="empty_user_id">Page user id.</string>
    <string name="toProgressText">To progress to a Level 4 Champion</string>
    <string name="playFor">Play for</string>
    <string name="join">Join</string>
    <string name="cashContain">More cash contain</string>
    <string name="unlockReward">Unlock these reward at level 10</string>
    <string name="reward">Reward</string>
    <string name="noRewardEarnd">No reward earned yet.</string>
    <string name="noRewardEarndtext">More you play,the more you get. Join contest to be champion.</string>
    <string name="yourAccount">Your Account</string>
    <string name="unutilized">Unutilized</string>
    <string name="deposited">Deposited</string>
    <string name="winnings">Winnings</string>
    <string name="cashBonus">Cash Bonus</string>
    <string name="addcash">Add Cash</string>
    <string name="you_will_receive_code_on_this_email_address">You will receive a code on this email address.</string>
    <string name="send_otp">Send OTP</string>
    <string name="winnings_messages">Please complete your Step 1 &amp; 2 :</string>
    <string name="verify_your_email">Verify Your Email</string>
    <string name="verify_your_mobile_number">• Verify your mobile number</string>
    <string name="verify_your_email_address">• Verify your email address</string>
    <string name="verify_your_pan_card">• Verify your PAN card</string>
    <string name="teams">Teams</string>
    <string name="winnings_breakup">Winnings Breakup</string>
    <string name="note_winnings">Note: The actual prize money may be different then the price money mentioned above
        if there is a tie for any of the winnings positions. Check FAQs for further details.
        As per government regulations, a tax of 31.2% will be deducted if an individual wins more then Rs 10,000</string>
    <string name="total_winning">Total winnings</string>
    <string name="filters">Filters</string>
    <string name="reset">Reset</string>
    <string name="contest_size">Contest Size</string>
    <string name="contest_type">Contest type</string>
    <string name="apply">Apply</string>
    <string name="nav_leaderboard">Leaderboard</string>
    <string name="viewteam">View teams</string>
    <string name="viewteamMsg">View the selected players of all teams after deadline. No team changes post that.</string>
    <string name="entry">Entry</string>
    <string name="price_pool">Prize Pool</string>
</resources>