<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_item_email_not_verified"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_8ssp"
    android:layout_marginTop="@dimen/_4sdp"
    android:layout_marginRight="@dimen/_8ssp"
    android:layout_marginBottom="@dimen/_4sdp"
    app:cardPreventCornerOverlap="false"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.mw.eleven11.customView.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/verify_your_email"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/primary_txt_size"
                app:textfont="r" />


            <com.mw.eleven11.customView.CustomEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailAddress"
                android:imeActionLabel="Done"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="@dimen/primary_txt_size"
                app:hintfont="r"
                app:textfont="r" />

            <com.mw.eleven11.customView.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:text="@string/you_will_receive_code_on_this_email_address"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/secondary_txt_size"
                app:textfont="r" />


            <com.mw.eleven11.customView.CustomTextView
                android:id="@+id/ctv_send_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/button_solid_bg_theme_active"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/send_otp"
                android:textColor="@color/white"
                android:textSize="@dimen/primary_txt_size"
                app:textfont="r" />

        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>