<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/default_background"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_background_home_page"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ctv_close"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_4sdp"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_close" />

        <com.mw.eleven11.customView.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/winnings_breakup"
            android:textColor="@color/white"
            android:textSize="@dimen/primary_txt_size"
            app:textAllCaps="true"
            app:textfont="b" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/default_background"
                android:orientation="vertical">

                <com.mw.eleven11.customView.CustomTextView
                    android:id="@+id/total_winning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/price_pool"
                    android:textAlignment="center"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/secondary_txt_size"
                    app:textfont="sb" />

                <com.mw.eleven11.customView.CustomTextView
                    android:id="@+id/total_winningAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_winning"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_15ssp"
                    app:textfont="b" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/default_background"
                    android:padding="@dimen/_4sdp"
                    tools:listitem="@layout/list_item_matches" />


                <com.mw.eleven11.customView.CustomTextView
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:text="@string/note_winnings"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/secondary_txt_size"
                    app:textfont="r" />


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>
</LinearLayout>