<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/default_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_background_home_page"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ctv_close"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_4sdp"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_close" />

        <com.mw.eleven11.customView.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/filters"
            android:textColor="@color/white"
            android:textSize="@dimen/primary_txt_size"
            app:textAllCaps="true"
            app:textfont="b" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="420dp">

        <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rl_bottom"
            android:background="@color/default_background"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/default_background"
                android:orientation="vertical">


                <com.mw.eleven11.customView.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/entry"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/secondary_txt_size"
                    app:textAllCaps="true"
                    app:textfont="sb" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/default_background"
                    tools:listitem="@layout/list_item_matches" />


                <com.mw.eleven11.customView.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/winnings"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/secondary_txt_size"
                    app:textAllCaps="true"
                    app:textfont="sb" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_win"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/default_background"
                    tools:listitem="@layout/list_item_matches" />


                <com.mw.eleven11.customView.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/contest_type"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/secondary_txt_size"
                    app:textAllCaps="true"
                    app:textfont="sb" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_contain_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/default_background"
                    tools:listitem="@layout/list_item_matches" />

                <com.mw.eleven11.customView.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/contest_size"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/secondary_txt_size"
                    app:textAllCaps="true"
                    app:textfont="sb" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:background="@color/default_background"
                    tools:listitem="@layout/list_item_matches" />


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/default_background"
            android:orientation="horizontal"
            android:padding="@dimen/_4sdp"
            android:visibility="visible">


            <com.mw.eleven11.customView.CustomTextView
                android:id="@+id/ctv_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/button_empty_bg_white_stroke_theme"
                android:gravity="center"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingRight="@dimen/_16sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/reset"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:textfont="r" />


            <com.mw.eleven11.customView.CustomTextView
                android:id="@+id/ctv_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/button_solid_bg_theme_active"
                android:gravity="center"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingRight="@dimen/_16sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/apply"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:textfont="r" />


        </LinearLayout>
    </RelativeLayout>
</LinearLayout>